--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/styled-components": "^4.1.12",
+    "bignumber.js": "^8.1.1",
     "bn.js": "^4.11.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -33,6 +34,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@vechain/connex": "^1.2.2"
+    "@vechain/connex": "^1.2.2",
+    "truffle-assertions": "^0.8.2"
   }
 }
