--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "typescript": "^3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_CONTRACT_ADDRESS=0xd1c5f149931A8A57e3db7789073e0496992bfbcF react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
